fixed footer spacing

--- a/style.css
+++ b/style.css
@@ -145,15 +145,13 @@ nav a:hover, nav li.active a{
 
 footer{
     margin: 60px 0;
+    padding: 0 80px ;
 }
 
 footer .contact-box{
 background-color: var(--container-color);
-padding: 30px;
+padding: 20px;
 border-radius: 8px;
-
-
-    
 
 }
 
